@@ -1,5 +1,7 @@
 /*
- * Copyright 2017 Adobe.
+ * ACS AEM Commons
+ *
+ * Copyright (C) 2013 - 2023 Adobe
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,32 +17,40 @@
  */
 package com.adobe.acs.commons.mcp.util;
 
-import com.adobe.acs.commons.mcp.form.FieldComponent;
-import com.adobe.acs.commons.mcp.form.FormField;
-import org.apache.commons.lang3.reflect.FieldUtils;
-import org.apache.sling.api.resource.ValueMap;
-import org.apache.sling.api.scripting.SlingScriptHelper;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import static com.adobe.acs.commons.mcp.util.IntrospectionUtil.getCollectionComponentType;
+import static com.adobe.acs.commons.mcp.util.IntrospectionUtil.hasMultipleValues;
+import static com.adobe.acs.commons.mcp.util.ValueMapSerializer.serializeToStringArray;
 
+import java.io.IOException;
+import java.lang.annotation.Annotation;
+import java.lang.reflect.AccessibleObject;
 import java.lang.reflect.Array;
 import java.lang.reflect.Field;
 import java.text.NumberFormat;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import static com.adobe.acs.commons.mcp.util.IntrospectionUtil.getCollectionComponentType;
-import static com.adobe.acs.commons.mcp.util.IntrospectionUtil.hasMultipleValues;
-import static com.adobe.acs.commons.mcp.util.ValueMapSerializer.serializeToStringArray;
-import java.io.IOException;
+import com.adobe.acs.commons.mcp.McpLocalizationService;
+import com.adobe.acs.commons.mcp.form.FieldComponent;
+import com.adobe.acs.commons.mcp.form.FormField;
+
+import org.apache.commons.collections4.MapUtils;
+import org.apache.commons.lang3.reflect.FieldUtils;
+import org.apache.commons.lang3.reflect.MethodUtils;
 import org.apache.sling.api.request.RequestParameter;
+import org.apache.sling.api.resource.Resource;
+import org.apache.sling.api.resource.ValueMap;
+import org.apache.sling.api.scripting.SlingScriptHelper;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * Processing routines for handing ProcessInput within a FormProcessor
@@ -69,17 +79,15 @@ public class AnnotatedFieldDeserializer {
         FormField inputAnnotation = field.getAnnotation(FormField.class);
         Object value;
         if (input.get(field.getName()) == null) {
-            if (inputAnnotation != null && inputAnnotation.required()) {
-                if (field.getType() == Boolean.class || field.getType() == Boolean.TYPE) {
-                    value = false;
-                } else {
-                    throw new NullPointerException("Required field missing: " + field.getName());
-                }
+            if (field.getType() == Boolean.class || field.getType() == Boolean.TYPE) {
+                value = false;
+            } else if (inputAnnotation != null && inputAnnotation.required()) {
+                throw new NullPointerException("Required field missing: " + field.getName());
             } else {
                 return;
             }
         } else {
-            value = input.get(field.getName());            
+            value = input.get(field.getName());
         }
 
         if (hasMultipleValues(field.getType())) {
@@ -91,7 +99,10 @@ public class AnnotatedFieldDeserializer {
             }
 
             if (val instanceof RequestParameter) {
-                /** Special case handling uploaded files; Method call ~ copied from parseInputValue(..) **/
+                /**
+                 * Special case handling uploaded files; Method call ~ copied
+                 * from parseInputValue(..)
+                 */
                 if (field.getType() == RequestParameter.class) {
                     FieldUtils.writeField(field, target, val, true);
                 } else {
@@ -101,7 +112,7 @@ public class AnnotatedFieldDeserializer {
                         LOG.error("Unable to get InputStream for uploaded file [ {} ]", ((RequestParameter) val).getName(), ex);
                     }
                 }
-            } else{
+            } else {
                 parseInputValue(target, String.valueOf(val), field);
             }
         }
@@ -121,7 +132,7 @@ public class AnnotatedFieldDeserializer {
             }
             FieldUtils.writeField(field, target, array, true);
         } else {
-            Collection c = (Collection) getInstantiatableListType(field.getType()).newInstance();
+            Collection c = (Collection) getInstantiatableListType(field.getType()).getDeclaredConstructor().newInstance();
             c.addAll(convertedValues);
             FieldUtils.writeField(field, target, c, true);
         }
@@ -179,21 +190,104 @@ public class AnnotatedFieldDeserializer {
         }
     }
 
+    public static Stream<AccessibleObject> getAllAnnotatedObjectMembers(Class source, Class<? extends Annotation> annotation) {
+        return Stream.concat(
+                FieldUtils.getFieldsListWithAnnotation(source, annotation).stream()
+                        .sorted(AnnotatedFieldDeserializer::superclassFieldsFirst),
+                MethodUtils.getMethodsListWithAnnotation(source, annotation).stream()
+        );
+    }
+
     public static Map<String, FieldComponent> getFormFields(Class source, SlingScriptHelper sling) {
-        return FieldUtils.getFieldsListWithAnnotation(source, FormField.class)
-                .stream()
-                .collect(Collectors.toMap(Field::getName, f -> {
+        final Map<String, FieldComponent> comps = new LinkedHashMap<>();
+        Map<String, String> overlayedLangs = loadOverlayedLanguages(sling);
+        getAllAnnotatedObjectMembers(source, FormField.class)
+            .forEach(
+                f -> {
                     FormField fieldDefinition = f.getAnnotation(FormField.class);
-                    FieldComponent component;
-                    try {
-                        component = fieldDefinition.component().newInstance();
-                        component.setup(f.getName(), f, fieldDefinition, sling);
-                        return component;
-                    } catch (InstantiationException | IllegalAccessException ex) {
-                        LOG.error("Unable to instantiate field component for " + f.getName(), ex);
+                    if (fieldDefinition.localize() && MapUtils.isNotEmpty(overlayedLangs)) {
+                        comps.putAll(createLocalizedComponent(sling, f, fieldDefinition, overlayedLangs));
+                    } else {
+                        try {
+                            FieldComponent component = fieldDefinition.component().getDeclaredConstructor().newInstance();
+                            component.setup(AccessibleObjectUtil.getFieldName(f), f, fieldDefinition, sling);
+                            comps.put(AccessibleObjectUtil.getFieldName(f), component);
+                        } catch (RuntimeException | ReflectiveOperationException ex) {
+                            LOG.error("Unable to instantiate field component for " + f.toString(), ex);
+                        }
                     }
-                    return null;
-                }, (a, b) -> a, LinkedHashMap::new));
+                }
+        );
+        return comps;
+    }
+
+    private static Map<String, String> loadOverlayedLanguages(SlingScriptHelper sling) {
+        Map<String, String> overlayedLangs = new LinkedHashMap<>();
+        
+        if (sling != null) {
+            String overlayedLanguagesResourcePath = getOverlayedLanguagesResourcePath(sling);
+
+            // Read overlayed languages list
+            Resource rootRes = sling.getRequest().getResourceResolver().getResource(overlayedLanguagesResourcePath);
+            if (rootRes != null) {
+                Iterator<Resource> itr = rootRes.listChildren();
+                while (itr.hasNext()) {
+                    Resource langRes = itr.next();
+                    String language = langRes.getValueMap().get("language", "");
+                    String country = langRes.getValueMap().get("country", "");
+                    if (!country.isEmpty() && !country.equals("*")) {
+                        language = language + " - " + country;
+                    }
+                    overlayedLangs.put(langRes.getName(), language);
+                }
+            }
+        }
+
+        return overlayedLangs;
+    }
+
+    private static String getOverlayedLanguagesResourcePath(SlingScriptHelper sling) {
+        String overlayedLanguagesResourcePath = null;
+
+        McpLocalizationService mcpLocalizationService = sling.getService(McpLocalizationService.class);
+        if(mcpLocalizationService != null && mcpLocalizationService.isLocalizationEnabled()) {
+            overlayedLanguagesResourcePath = mcpLocalizationService.getOverlayedLanguagesResourcePath();
+        }
+        return overlayedLanguagesResourcePath;
+    }
+
+
+    private static Map<String, FieldComponent> createLocalizedComponent(SlingScriptHelper sling, AccessibleObject accessibleObject, FormField fieldDefinition, Map<String, String> overlayedLangs) {
+        Map<String, FieldComponent> comps = new LinkedHashMap<>();
+        String[] langs = fieldDefinition.languages();
+        if (langs == null || langs.length < 2) {
+            langs = overlayedLangs.keySet().toArray(new String[1]);
+        }
+        for (String lang : langs) {
+            String fieldName = AccessibleObjectUtil.getFieldName(accessibleObject)
+                            + (lang.equalsIgnoreCase("en") ? "" : "." + lang);
+            String title = fieldDefinition.name()
+                            + (lang.equalsIgnoreCase("en") ? "" : " (" + overlayedLangs.get(lang) + ")");
+            try {
+                FieldComponent component = fieldDefinition.component().getDeclaredConstructor().newInstance();
+                component.setup(fieldName, accessibleObject, fieldDefinition, sling);
+                component.getProperties().put("fieldLabel", title);
+                comps.put(fieldName, component);
+            } catch (RuntimeException | ReflectiveOperationException ex) {
+                LOG.error("Unable to instantiate field component for " + accessibleObject.toString(), ex);
+            }
+        }
+        return comps;
+    }
+
+    private static int superclassFieldsFirst(Field a, Field b) {
+        if (a.getDeclaringClass() == b.getDeclaringClass()) {
+            return 0;
+        } else if (a.getDeclaringClass().isAssignableFrom(b.getDeclaringClass())) {
+            return -1;
+        } else {
+            return 1;
+        }
     }
 
     private AnnotatedFieldDeserializer() {
